Home - fixed alignment of videos Customers  - updated style on block quote and fix video caption Pricing - removed additional action boxes Footer - updated links Get started and request info - text updates

--- a/website/src/css/pages/__case_studies.scss
+++ b/website/src/css/pages/__case_studies.scss
@@ -10,7 +10,7 @@
     }
 
     &__label {
-        margin-top: .5rem;
+        margin-top: 0.5rem;
         font-size: 1rem;
         font-weight: 700;
         text-transform: uppercase;
@@ -51,11 +51,12 @@
                 font-size: 1.9rem;
             }
         }
-
+        a {
+            font-size: 1rem;
+        }
         footer {
-            font-size: 1.4rem;
+            font-size: 1rem;
             font-weight: 400;
-            opacity: 0.6;
         }
 
         &--in-content {
@@ -63,10 +64,10 @@
 
             p {
                 padding-left: 1rem;
-                border-left: 3px solid #00b4f2;
+                border-left: 3px solid #f86012;
                 font-weight: 600;
                 font-size: 1.2rem;
-                line-height: 1.3;
+                line-height: 1.5;
             }
         }
     }
